--- a/client/src/app/views/genes/genes-flags/genes-flags.component.html
+++ b/client/src/app/views/genes/genes-flags/genes-flags.component.html
@@ -1,18 +1,6 @@
 <nz-row [nzGutter]="16">
   <nz-col nzSpan="16" >
-    <nz-card nzTitle="Flags" nz-type="inner" style="margin-bottom: 1em;">
-      <nz-list nzDirection="vertical" style="width: 100%">
-        <nz-list-item>
-          <nz-alert nzType="error" nzMessage="Flag" nzDescription="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus aliquam semper ipsum. Cras eu tempor felis. Aliquam erat volutpat." style="width: 100%"> </nz-alert>
-        </nz-list-item>
-        <nz-list-item>
-          <nz-alert nzType="error" nzMessage="Flag" nzDescription="This entity name is waaaaaaaaay too long." style="width: 100%"> </nz-alert>
-        </nz-list-item>
-        <nz-list-item>
-          <nz-alert nzType="error" nzMessage="Flag" nzDescription="Dolor sit amet, consectetur adipiscing elit. Phasellus aliquam semper ipsum. Cras eu tempor felis. Aliquam erat volutpat." style="width: 100%"> </nz-alert>
-        </nz-list-item>
-      </nz-list>
-    </nz-card>
+    <cvc-flag-list [flaggable]="flaggable"></cvc-flag-list>
     <nz-card nzTitle="Add a Flag" nz-type="inner" style="min-height: 150px;">
       <cvc-flag-entity [flaggable]="flaggable"></cvc-flag-entity>
     </nz-card>
