--- a/client/src/app/views/genes/genes-browse/genes-browse.component.html
+++ b/client/src/app/views/genes/genes-browse/genes-browse.component.html
@@ -15,13 +15,10 @@
     <div nz-row>
       <div nz-col [nzSpan]="24">
         <div class="content">
-          <ng-container *ngIf="{ value: data$ | async } as data">
+          <ng-container *ngIf="{ value: data$ | ngrxPush } as data">
             <nz-table #genesTable
-              [nzData]="(genes$ | async)"
-              [nzVirtualForTrackBy]="trackById"
-              [nzLoading]="(isLoading$ | async)"
-              [nzLoadingDelay]="isLoadingDelay"
-              [nzScroll]="{ x: '100%', y: '640px' }"
+              [nzData]="(genes$ | ngrxPush)"
+              [nzLoading]="(isLoading$ | ngrxPush)"
               [nzFrontPagination]="false"
               [nzShowPagination]="false">
               <thead>
@@ -36,35 +33,33 @@
                 </tr>
               </thead>
               <tbody>
-                <ng-template nz-virtual-scroll let-gene let-id="id">
-                  <tr>
-                    <td>
-                      <a routerLink="/genes/{{gene.id}}">{{gene.name}}</a>
-                    </td>
-                    <td>
-                      <span *ngFor="let alias of gene.aliases; last as isLast" >
-                        {{ alias.name }}{{ isLast ? '' : ', ' }}
+                <tr *ngFor="let gene of genesTable.data">
+                  <td>
+                    <a routerLink="/genes/{{gene.id}}">{{gene.name}}</a>
+                  </td>
+                  <td>
+                    <span *ngFor="let alias of gene.aliases; last as isLast" >
+                      {{ alias.name }}{{ isLast ? '' : ', ' }}
+                    </span>
+                  </td>
+                  <td>
+                    <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
+                      <span *ngFor="let disease of gene.diseases; last as isLast" >
+                        {{ disease.name }}{{ isLast ? '' : ', ' }}
                       </span>
-                    </td>
-                    <td>
-                      <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
-                        <span *ngFor="let disease of gene.diseases; last as isLast" >
-                          {{ disease.name }}{{ isLast ? '' : ', ' }}
-                        </span>
-                      </p>
-                    </td>
-                    <td>
-                      <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
-                        <span *ngFor="let drug of gene.drugs; last as isLast" >
-                          {{ drug.name }}{{ isLast ? '' : ', ' }}
-                        </span>
-                      </p>
-                    </td>
-                    <td nzRight>{{gene.variantCount}}</td>
-                    <td nzRight>{{gene.evidenceItemCount}}</td>
-                    <td nzRight>{{gene.assertionCount}}</td>
-                  </tr>
-                </ng-template>
+                    </p>
+                  </td>
+                  <td>
+                    <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="3">
+                      <span *ngFor="let drug of gene.drugs; last as isLast" >
+                        {{ drug.name }}{{ isLast ? '' : ', ' }}
+                      </span>
+                    </p>
+                  </td>
+                  <td nzRight>{{gene.variantCount}}</td>
+                  <td nzRight>{{gene.evidenceItemCount}}</td>
+                  <td nzRight>{{gene.assertionCount}}</td>
+                </tr>
               </tbody>
             </nz-table>
           </ng-container>
@@ -72,22 +67,9 @@
         </div>
       </div>
     </div>
-    <div nz-row>
-      <div nz-col nzSpan="8">
-        <h4>data$:</h4>
-        <ngx-json-viewer *ngIf="(data$ | async) as data" [json]="data" [expanded]="false"></ngx-json-viewer>
-      </div>
-      <div nz-col nzSpan="8">
-        <h4>genes$</h4>
-        <p><button nz-button nzType="primary" (click)="loadMore()">Load More</button></p>
-        <ngx-json-viewer *ngIf="(genes$ | async) as genes" [json]="genes" [expanded]="false"></ngx-json-viewer>
-      </div>
-      <div nz-col nzSpan="8">
-        <h4>pageInfo$</h4>
-        <p *ngIf="(totalCount$ | async) as totalCount">Total Count: {{ totalCount }}</p>
-        <p *ngIf="(totalPageCount$ | async) as totalPageCount">Total Page Count: {{ totalPageCount }}</p>
-        <ngx-json-viewer *ngIf="(pageInfo$ | async) as pageInfo" [json]="pageInfo" [expanded]="false"></ngx-json-viewer>
-      </div>
-    </div>
   </nz-page-header-content>
 </nz-page-header>
+
+<ng-container *ngrxLet="pageInfo$ as pageInfo">
+  <button *ngIf="pageInfo.hasNextPage" nz-button (click)="loadMore(pageInfo.endCursor)">Load More</button>
+</ng-container>
