--- a/client/src/app/views/genes/genes-summary/genes-summary.component.html
+++ b/client/src/app/views/genes/genes-summary/genes-summary.component.html
@@ -1,4 +1,4 @@
-<nz-space nzSize="middle" *ngIf="(gene$ | async) as gene"
+<nz-space nzSize="middle" *ngIf="(gene$ | ngrxPush) as gene"
   nzDirection="vertical"
   class="space-align-block">
   <nz-space-item>
@@ -13,7 +13,7 @@
       </div>
       <div nz-col
         nzSpan="12">
-        <cvc-my-gene-info [geneInfo]="myGeneInfo$ | async"></cvc-my-gene-info>
+        <cvc-my-gene-info [geneInfo]="myGeneInfo$ | ngrxPush"></cvc-my-gene-info>
       </div>
       <cvc-variant-menu [geneId]="gene.id"></cvc-variant-menu>
     </div>
