--- a/client/src/app/components/genes/my-gene-info/my-gene-info.component.less
+++ b/client/src/app/components/genes/my-gene-info/my-gene-info.component.less
@@ -1,10 +1,15 @@
 :host {
   display: block;
-  .key-col {
-    text-align: right;
-    font-weight: bold;
-  }
-  .button-col {
-    text-align: right;
-  }
+}
+
+nz-card {
+  width: 100%;
+}
+
+.key-col {
+  text-align: right;
+  font-weight: bold;
+}
+.button-col {
+  text-align: right;
 }
