switched to getting gene name frim Input attribute instead of cache query

--- a/client/src/app/views/genes/genes-summary/genes-summary.component.html
+++ b/client/src/app/views/genes/genes-summary/genes-summary.component.html
@@ -20,7 +20,7 @@
   <nz-space-item>
     <div nz-row [nzGutter]="16" >
       <nz-col [nzSpan]="24" >
-        <cvc-variant-menu [geneId]="gene.id"></cvc-variant-menu>
+        <cvc-variant-menu [geneId]="gene.id" [geneName]="gene.name"></cvc-variant-menu>
       </nz-col>
     </div>
   </nz-space-item>
