--- a/client/src/app/views/genes/genes-summary/genes-summary.component.html
+++ b/client/src/app/views/genes/genes-summary/genes-summary.component.html
@@ -32,7 +32,7 @@
       [nzGutter]="24">
       <nz-col [nzSpan]="24">
         <cvc-event-feed [subscribable]="subscribableEntity"
-          [subscribableName]="gene.name"></cvc-event-feed>
+          [subscribableName]="gene.name" tagDisplay="hideSubject"></cvc-event-feed>
       </nz-col>
     </div>
   </nz-space-item>
