--- a/client/src/app/views/genes/genes-detail/genes-detail.component.less
+++ b/client/src/app/views/genes/genes-detail/genes-detail.component.less
@@ -36,6 +36,11 @@ nz-page-header-title.flagged {
   }
 }
 
+#contributors {
+  display: inline-block;
+  border: 1px solid green;
+}
+
 .revision-list {
   .revision-description-diff {
     .diff {
